--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
         <meta charset="UTF-8">
         <title>cadastre-parser</title>
         <link href="app/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-        <script src="app/libs/jquery-2.2.1.min.js" type="text/javascript"></script>
+        <script>window.$ = window.jQuery = require('./app/libs/jquery-2.2.1.min.js');</script>
+        <!--<script src="app/libs/jquery-2.2.1.min.js" type="text/javascript"></script>-->
         <script src="app/libs/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
         <script src="app/libs/cadXML2GeoJSON/app.js" type="text/javascript"></script>
+        <script src="app.js" type="text/javascript"></script>
     </head>
     <body>
 
@@ -16,7 +18,7 @@
             </div>
             <div class="panel-body">
                 <div class="input-group">
-                    <input class="input-lg" type="file">
+                    <input id="input-file" class="input-lg" type="file">
                     <button id="convert" class="btn btn-primary">Сохранить GeoJSON</button>
                     <button id="save-geo" class=" hidden">Сохранить GeoJSON</button>
                 </div>
