--- a/app/index.html
+++ b/app/index.html
@@ -5,11 +5,11 @@
         <title>cadastre-parser</title>
         <link href="libs/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
         <script>window.$ = window.jQuery = require('./libs/jquery-2.2.1.min.js');</script>
-        <script>window.Converter = require('./libs/cadXML2GeoJSON/cadXML2GeoJSON.js');</script>
+        <!--<script>window.Converter = require('cadXML2GeoJSON.js');</script>-->
         <!--<script src="app/libs/jquery-2.2.1.min.js" type="text/javascript"></script>-->
         <script src="libs/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-        <!--<script src="libs/cadXML2GeoJSON/cadXML2GeoJSON.js" type="text/javascript"></script>-->
         <script src="libs/jquery.xml2json.js" type="text/javascript"></script>
+        <!--<script src="../node_modules/cadXML2GeoJSON.js" type="text/javascript"></script>-->
         
     </head>
     <body>
@@ -21,8 +21,8 @@
             <div class="panel-body">
                 <div class="input-group">
                     <input id="input-file" class="input-lg" type="file">
-                    <button id="convert" class="btn btn-primary">Сохранить GeoJSON</button>
-                    <button id="save-geo" class=" hidden">Сохранить GeoJSON</button>
+                    <!--<button id="convert" class="btn btn-primary">Конвертировать в GeoJSON</button>-->
+                    <button id="save-geo" class="btn btn-primary hidden">Сохранить GeoJSON</button>
                 </div>
             </div>
         </div>
@@ -32,7 +32,7 @@
                 Chrome <script>document.write(process.versions.chrome)</script>,
                 and Electron <script>document.write(process.versions.electron)</script>.
             </div>
-            <div class="panel-footer panel-info">используемые технологии</div>
+            <div class="panel-footer panel-info">Филиппов Владислав. 2016</div>
         </div>
 <script src="app.js" type="text/javascript"></script>
     </body>
