--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
         <script src="libs/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
         <script src="libs/jquery.xml2json.js" type="text/javascript"></script>
         <!--<script src="../node_modules/cadXML2GeoJSON.js" type="text/javascript"></script>-->
-        
+
     </head>
     <body>
 
@@ -20,20 +20,20 @@
             </div>
             <div class="panel-body">
                 <div class="input-group">
-                    <input id="input-file" class="input-lg" type="file">
-                    <!--<button id="convert" class="btn btn-primary">Конвертировать в GeoJSON</button>-->
+                    <!--<input id="input-file" class="input-lg" type="file">-->
+                    <input type="button" class="btn btn-primary" value="Открыть XML" id="input-file">
                     <button id="save-geo" class="btn btn-primary hidden">Сохранить GeoJSON</button>
                 </div>
             </div>
         </div>
         <div class="panel panel-default">
             <div class="panel-body">
-                node <script>document.write(process.versions.node)</script>,
+                NodeJS <script>document.write(process.versions.node)</script>,
                 Chrome <script>document.write(process.versions.chrome)</script>,
                 and Electron <script>document.write(process.versions.electron)</script>.
             </div>
-            <div class="panel-footer panel-info">Филиппов Владислав. 2016</div>
+            <div class="panel-footer panel-info">Филиппов Владислав (filippov70@gmail.com). 2017</div>
         </div>
-<script src="app.js" type="text/javascript"></script>
+        <script src="app.js" type="text/javascript"></script>
     </body>
 </html>
